--- a/WindowsAPI/WindowsAPI/WindowsAPI.vcxproj
+++ b/WindowsAPI/WindowsAPI/WindowsAPI.vcxproj
@@ -127,13 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Maths.h" />
+    <ClInclude Include="yaApplication.h" />
+    <ClInclude Include="Common.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WindowsAPI.h" />
+    <ClInclude Include="yaEntity.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WindowsAPI.cpp" />
+    <ClCompile Include="yaApplication.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="yaEntity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="WindowsAPI.rc" />
