--- a/WindowsAPI/WindowsAPI/WindowsAPI.vcxproj
+++ b/WindowsAPI/WindowsAPI/WindowsAPI.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="def.h" />
     <ClInclude Include="Meteor.h" />
     <ClInclude Include="MeteorManager.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="yaGameObject.h" />
     <ClInclude Include="Maths.h" />
     <ClInclude Include="yaApplication.h" />
@@ -139,10 +140,13 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WindowsAPI.h" />
     <ClInclude Include="yaEntity.h" />
+    <ClInclude Include="yaImage.h" />
     <ClInclude Include="yaInput.h" />
     <ClInclude Include="yaLogoScene.h" />
     <ClInclude Include="yaMissile.h" />
     <ClInclude Include="yaPlayer.h" />
+    <ClInclude Include="yaResource.h" />
+    <ClInclude Include="yaResources.h" />
     <ClInclude Include="yaScene.h" />
     <ClInclude Include="yaSceneManager.h" />
     <ClInclude Include="yaTime.h" />
@@ -151,14 +155,18 @@
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="Meteor.cpp" />
     <ClCompile Include="MeteorManager.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="yaGameObject.cpp" />
     <ClCompile Include="yaApplication.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="yaEntity.cpp" />
+    <ClCompile Include="yaImage.cpp" />
     <ClCompile Include="yaInput.cpp" />
     <ClCompile Include="yaLogoScene.cpp" />
     <ClCompile Include="yaMissile.cpp" />
     <ClCompile Include="yaPlayer.cpp" />
+    <ClCompile Include="yaResource.cpp" />
+    <ClCompile Include="yaResources.cpp" />
     <ClCompile Include="yaScene.cpp" />
     <ClCompile Include="yaSceneManager.cpp" />
     <ClCompile Include="yaTime.cpp" />
