--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="Animator.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="BackgroundUI.h" />
+    <ClInclude Include="ButtonUI.h" />
     <ClInclude Include="CameraMgr.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="CollisionMgr.h" />
@@ -148,6 +149,7 @@
     <ClInclude Include="EventRegisteror.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Monster.h" />
+    <ClInclude Include="MouseMgr.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="KeyMgr.h" />
     <ClInclude Include="MathLib.h" />
@@ -171,6 +173,7 @@
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BackgroundUI.cpp" />
+    <ClCompile Include="ButtonUI.cpp" />
     <ClCompile Include="CameraMgr.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CollisionMgr.cpp" />
@@ -179,6 +182,7 @@
     <ClCompile Include="EventRegisteror.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="MouseMgr.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
     <ClCompile Include="MyEngine.cpp" />
