--- a/MyEngine/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine/MyEngine.vcxproj.filters
@@ -122,6 +122,12 @@
     <Filter Include="Engine\GameObject\UI\CheckButtonUI">
       <UniqueIdentifier>{95519026-1813-4270-a296-22dd5ccd74a5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\Scene\TownScene">
+      <UniqueIdentifier>{6ba9b6c6-54f2-4db8-96d4-776cdbf1e41c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Structure">
+      <UniqueIdentifier>{de0fee5d-3cf8-4732-ab44-ad67cd758f6d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h" />
@@ -232,6 +238,12 @@
     </ClInclude>
     <ClInclude Include="CheckButtonUI.h">
       <Filter>Engine\GameObject\UI\CheckButtonUI</Filter>
+    </ClInclude>
+    <ClInclude Include="TownScene.h">
+      <Filter>Engine\Scene\TownScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Structure.h">
+      <Filter>Engine\GameObject\Structure</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -349,6 +361,12 @@
     </ClCompile>
     <ClCompile Include="CheckButtonUI.cpp">
       <Filter>Engine\GameObject\UI\CheckButtonUI</Filter>
+    </ClCompile>
+    <ClCompile Include="TownScene.cpp">
+      <Filter>Engine\Scene\TownScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Structure.cpp">
+      <Filter>Engine\GameObject\Structure</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
