--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="CollisionMgr.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="Effect.h" />
     <ClInclude Include="EnumDefine.h" />
     <ClInclude Include="EventMgr.h" />
     <ClInclude Include="EventRegisteror.h" />
@@ -193,6 +194,7 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CollisionMgr.cpp" />
     <ClCompile Include="Component.cpp" />
+    <ClCompile Include="Effect.cpp" />
     <ClCompile Include="EventMgr.cpp" />
     <ClCompile Include="EventRegisteror.cpp" />
     <ClCompile Include="GameObject.cpp" />
